--- a/about.html
+++ b/about.html
@@ -21,25 +21,24 @@
         </nav>
     </header>
     <div id="content">
-        <h2>Home Page.</h2>
+        <h2>About me.</h2>
         <div id="contentcolumns">
-            <a href="about.html">
+            <a href="">
                 <article class="column" href="about.html">
-                    <h2>About me.</h2>
-                    <img src="images/me.png" alt="">
-                    <h3>Est laborum ex dolore et anim eiusmod.</h3>
-                    <p>Incididunt occaecat nisi irure excepteur eu deserunt incididunt ut est nisi mollit voluptate non.Sint nostrud consectetur fugiat tempor.</p>
+                    <h2>Resume.</h2>
+                    <img src="images/resume.png" alt="">
+                    <h3>Complete history of employment and extracurriculars</h3>
+                    <p>Click on this panel to download my resume and view the entire document</p>
                 </article>
             </a>
-            <a href="work.html">
+            <a href="">
                 <article class="column">
-                    <h2>My work.</h2>
-                    <img src="images/code.png" alt="">
-                    <h3>Velit occaecat exercitation laboris laborum</h3>
-                    <p>Tempor aliquip id cupidatat in magna ex aliquip eiusmod veniam ea non aute irure elit.</p>
+                   <h2>Exercitation eiusmod velit ea ullamco mollit commodo culpa.</h2>
+                   <p>Nisi velit nisi nostrud ullamco officia minim commodo consectetur. Nulla excepteur ex ipsum culpa in cillum consequat aute qui esse excepteur. Est sint dolore ex nulla in. In ad mollit cupidatat cupidatat est deserunt voluptate ipsum dolor. Aliqua magna eu esse aute et sit anim cupidatat proident non. Tempor sint exercitation enim sit. Tempor et voluptate enim voluptate.</p>
                 </article>
             </a>
         </div>
+      
     </div>
     <footer>
         <nav>
