--- a/work.html
+++ b/work.html
@@ -21,22 +21,32 @@
         </nav>
     </header>
     <div id="content">
-        <h2>Home Page.</h2>
+        <h2>My work.</h2>
         <div id="contentcolumns">
-            <a href="about.html">
-                <article class="column" href="about.html">
-                    <h2>About me.</h2>
-                    <img src="images/me.png" alt="">
-                    <h3>Est laborum ex dolore et anim eiusmod.</h3>
-                    <p>Incididunt occaecat nisi irure excepteur eu deserunt incididunt ut est nisi mollit voluptate non.Sint nostrud consectetur fugiat tempor.</p>
+            <a href="https://dinkledorfinc.itch.io/laser-defender" target="_blank">
+                <article class="column" href="">
+                    <h2>Laser Defender</h2>
+                    <img src="images/laserdef.png" alt="">
+                    <h3>A space invaders knock-off</h3>
+                    <p>Made alongside a udemy course in unity using c#, clicking on this panel will take you to the itch.io page</p>
                 </article>
             </a>
-            <a href="work.html">
+            <a href="https://dinkledorfinc.itch.io/bouncy-boy" target="_blank">
                 <article class="column">
-                    <h2>My work.</h2>
-                    <img src="images/code.png" alt="">
-                    <h3>Velit occaecat exercitation laboris laborum</h3>
-                    <p>Tempor aliquip id cupidatat in magna ex aliquip eiusmod veniam ea non aute irure elit.</p>
+                    <h2>Bouncy Boy</h2>
+                    <img src="images/bouncy.png" alt="">
+                    <h3>Challenge project made in 8 hours</h3>
+                    <p>Me and a friend spent exactly 8 hours making this from scratch, certainly rough around the edges but it was a lot of fun. Itch.io link included</p>
+                </article>
+            </a>
+            <a href="">
+                <article class="column" href="">
+                
+                </article>
+            </a>
+            <a href="">
+                <article class="column" href="">
+                
                 </article>
             </a>
         </div>
