--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <div id="links">
-                <a href="index.html">Home</a><a href="about.html">About</a><a href="work.html">Projects</a><a href="#">Resume</a>
+                <a href="index.html">Home</a><a href="about.html">About</a><a href="work.html">Projects</a><a href="documents/resume.docx">Resume</a>
             </div>
             
             <div id="Nameplate">
@@ -23,7 +23,7 @@
     <div id="content">
         <h2>About me.</h2>
         <div id="contentcolumns">
-            <a href="">
+            <a href="documents/resume.docx">
                 <article class="column" href="about.html">
                     <h2>Resume.</h2>
                     <img src="images/resume.png" alt="">
@@ -33,8 +33,8 @@
             </a>
             <a href="">
                 <article class="column">
-                   <h2>Exercitation eiusmod velit ea ullamco mollit commodo culpa.</h2>
-                   <p>Nisi velit nisi nostrud ullamco officia minim commodo consectetur. Nulla excepteur ex ipsum culpa in cillum consequat aute qui esse excepteur. Est sint dolore ex nulla in. In ad mollit cupidatat cupidatat est deserunt voluptate ipsum dolor. Aliqua magna eu esse aute et sit anim cupidatat proident non. Tempor sint exercitation enim sit. Tempor et voluptate enim voluptate.</p>
+                   <h2>Software Developement Student</h2>
+                   <p>I moved to the United States in August 2021 in order to persue my education. After spending a year studying Psychology I decided to change my major to Software Developement. With my new major I am extremely excited to persue job opportunities in the field and learn more. </p>
                 </article>
             </a>
         </div>
@@ -43,7 +43,7 @@
     <footer>
         <nav>
             <div id="links">
-                <a href="index.html">Home</a><a href="about.html">About</a><a href="work.html">Projects</a><a href="#">Resume</a>
+                <a href="index.html">Home</a><a href="about.html">About</a><a href="work.html">Projects</a><a href="documents/resume.docx">Resume</a>
             </div>
         </nav>
     </footer>
