--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Roy ten Brink</title>
     <link rel="stylesheet" href="stylesalt.css"> 
 </head>
 <body>
     <header>
         <nav>
             <div id="links">
-                <a href="index.html">Home</a><a href="about.html">About</a><a href="work.html">Projects</a><a href="#">Resume</a>
+                <a href="index.html">Home</a><a href="about.html">About</a><a href="work.html">Projects</a><a href="documents/resume.docx">Resume</a>
             </div>
             
             <div id="Nameplate">
@@ -27,16 +27,16 @@
                 <article class="column" href="about.html">
                     <h2>About me.</h2>
                     <img src="images/me.png" alt="">
-                    <h3>Est laborum ex dolore et anim eiusmod.</h3>
-                    <p>Incididunt occaecat nisi irure excepteur eu deserunt incididunt ut est nisi mollit voluptate non.Sint nostrud consectetur fugiat tempor.</p>
+                    <h3>My resume and a little excerpt</h3>
+                   
                 </article>
             </a>
             <a href="work.html">
                 <article class="column">
                     <h2>My work.</h2>
                     <img src="images/code.png" alt="">
-                    <h3>Velit occaecat exercitation laboris laborum</h3>
-                    <p>Tempor aliquip id cupidatat in magna ex aliquip eiusmod veniam ea non aute irure elit.</p>
+                    <h3>A couple of projects I've worked on</h3>
+                    <p>As of right now there's two games made in unity but hopefully more to come.</p>
                 </article>
             </a>
         </div>
@@ -44,7 +44,7 @@
     <footer>
         <nav>
             <div id="links">
-                <a href="index.html">Home</a><a href="about.html">About</a><a href="work.html">Projects</a><a href="#">Resume</a>
+                <a href="index.html">Home</a><a href="about.html">About</a><a href="work.html">Projects</a><a href="documents/resume.docx">Resume</a>
             </div>
         </nav>
     </footer>
